--- a/sys.env
+++ b/sys.env
@@ -1,3 +1,9 @@
 user = root
 pass = password
 host = localhost
+
+username = abc
+password = 123
+
+adminToken = admin_token
+userToken = user_token
