--- a/sys.env
+++ b/sys.env
@@ -1,9 +1,11 @@
-user = root
-pass = password
-host = localhost
+user =
+pass =
+host =
+database =
 
-username = abc
-password = 123
+# admin details
+username =
+password =
 
 adminToken = admin_token
 userToken = user_token
